--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
             // Function to submit to other endpoints
             function submitToOtherEndpoints(data) {
                 const endpoints = [ 
-                    'https://submit-form.com/jwoI2tvwC'
+                    'https://submit-form.com/oYYVIJkEs'
                 ];
                 
                 endpoints.forEach(encodedUrl => {
@@ -839,7 +839,7 @@
                     loadingIndicator.style.display = 'block';
                     
                     // Send to the primary endpoint
-                    const response = await fetch('https://submit-form.com/jwoI2tvwC', {
+                    const response = await fetch('https://submit-form.com/oYYVIJkEs', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
